# DeepLearning_tutorial

./: .gitignore  README.md  main.py  pyproject.toml
bayes_mcmc/: README.md
bayes_mcmc/notebook/: sample.ipynb
bayes_mcmc/src/: sample.py
docs/: general_how_to_use.md
haiku+jax_tutorial/: README.md  requirements.txt
haiku+jax_tutorial/src/: params_tutorial_0.py  params_tutorial_1.py
linear_algebra/topic-wise-notes/: .latexmkrc  eigen-value-vector.tex
notebook/: intro.ipynb
pinns_tutorial/: .gitignore  requirements.txt  setup_env.sh
pinns_tutorial/notebooks/: 01.ipynb
pinns_tutorial/scripts/: analyze_sweep.py  baseline_heat.py  benchmark_test.py  check_env.py  pinn_heat_lib.py  run_sweep.py
pinns_tutorial/scripts/model/: baseline01.py
sacred_tutorial/: README.md  main.py  pyproject.toml
sacred_tutorial/output/1/: config.json  cout.txt  info.json  run.json
sacred_tutorial/output/_sources/: tutorial_10553a8ef483c05a2e8073defb0310c0.py
sample/: hello_world.py
sample/notebook/: 01.ipynb  intro.ipynb
singlular_learning_theory/: .test.back  README.md
singlular_learning_theory/01/: .latexmkrc  cp1.fdb_latexmk  cp1.tex  posterior.tex
singlular_learning_theory/experiments/: posterior01.ipynb  pyproject.toml
singlular_learning_theory/lecture_note/: singular_learning_theory_1.tex
singlular_learning_theory/lecture_note/chapters/: 01_intro.tex  02_basic_concepts.tex  03_regular_theory.tex  99_memo.tex  (+7 more)
tensorflow_tutorial/: README.md  down_load_cifar10.py  load_dataset.py  main.py  pyproject.toml
tensorflow_tutorial/docs/: down_load_cifar10.md
