[project]
name = "deeplearning-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymc==5.7.2",
    "arviz==0.15.1",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "scipy==1.10.1",
    "setuptools<81",
    "japanize-matplotlib",
    "ipython",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
]
